* Fixed overflow of filters at Statistics view

--- a/src/view/Views/Statistics/StatisticsView.scss
+++ b/src/view/Views/Statistics/StatisticsView.scss
@@ -3,10 +3,6 @@
 }
 
 /* Filters */
-.filters-list {
-  flex-flow: row wrap;
-}
-
 .trans-type-filter {
   max-width: 450px;
 }
